stop the overflow

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -49,6 +49,7 @@ body {
   display: flex;
   justify-content: space-between !important;
   width: 100%;
+  max-width: 100vw;
   .nav-cta {
     width: 150px;
     background: $buttons-color1;
@@ -594,6 +595,14 @@ body {
       min-width: 100% !important;
     }
   }
+  .services{
+    .card{
+      margin-left: 0px !important;
+      margin-right: 0px !important;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+  }
 // blog page
 .latest-container{
   width: 100%;
@@ -601,12 +610,19 @@ body {
   width: 100%;
 }
 }
+.blog-card{
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 .all-cards{
   width: 100%;
   width: auto;
   .blog-card{
     max-width: none;
     width: 90%;
+   
   }
 }
 }
